<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.TransactionActivity">

    <!--Header-->
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/headerTutorial"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_alignParentTop="true"
        android:layout_gravity="center"
        android:background="@color/yellow">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Tutorial"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="30dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="How To Use The App"
                android:textColor="#5A5A5A"
                android:textSize="20dp"
                android:textStyle="normal" />

        </LinearLayout>

    </RelativeLayout>

    <!--Footer-->
    <RelativeLayout
        android:id="@+id/footerTutorial"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:background="@color/yellow"
        android:gravity="center">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/back_button"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_gravity="center_vertical"
                android:background="#00FFFFFF"
                android:drawableStart="@drawable/ic_left_arrow"
                android:drawableTint="@color/black"
                android:text="Back" />


        </LinearLayout>
    </RelativeLayout>

    <!--Content-->
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/footerTutorial"
        android:layout_below="@id/headerTutorial"
        android:fillViewport="true"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <View
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="20dp"
                android:background="@color/shinyBlack" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:text="@string/tutorial1"
                android:textColor="@color/black"
                android:textSize="15dp" />


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="500dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/black_border"
                android:padding="20dp"
                android:src="@drawable/tutorial_1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:text="@string/tutorial2"
                android:textColor="@color/black"
                android:textSize="15dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="500dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/tutorial_2"
                android:background="@drawable/black_border"
                android:padding="20dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:text="@string/tutorial3"
                android:textColor="@color/black"
                android:textSize="15dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="500dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/tutorial_3"
                android:background="@drawable/black_border"
                android:padding="20dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:text="@string/tutorial4"
                android:textColor="@color/black"
                android:textSize="15dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:background="@drawable/black_border"
                android:padding="20dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/tutorial_4" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:text="@string/tutorial5"
                android:textColor="@color/black"
                android:textSize="15dp" />


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="500dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/tutorial_5"
                android:background="@drawable/black_border"
                android:padding="20dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:text="@string/tutorial6"
                android:textColor="@color/black"
                android:textSize="15dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/tutorial_6"
                android:background="@drawable/black_border"
                android:padding="20dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:text="@string/tutorial7"
                android:textColor="@color/black"
                android:textSize="15dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="500dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/tutorial_10"
                android:background="@drawable/black_border"
                android:padding="20dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:text="@string/tutorial8"
                android:textColor="@color/black"
                android:textSize="15dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/tutorial_7"
                android:background="@drawable/black_border"
                android:padding="20dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:text="@string/tutorial9"
                android:textColor="@color/black"
                android:textSize="15dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/tutorial_9_2"
                android:background="@drawable/black_border"
                android:padding="20dp"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/tutorial_8"
                android:background="@drawable/black_border"
                android:padding="20dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:text="@string/tutorial10"
                android:textColor="@color/black"
                android:textSize="15dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="500dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/tutorial_9"
                android:background="@drawable/black_border"
                android:padding="20dp"/>
        </LinearLayout>

    </ScrollView>
</RelativeLayout>


